Added test cases for game engine helper

--- a/SpectatorFootball.unitTests/SpectatorFootball.unitTests.csproj
+++ b/SpectatorFootball.unitTests/SpectatorFootball.unitTests.csproj
@@ -50,6 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coach\CoachTEST.cs" />
+    <Compile Include="Game_Engine_Helper\Game_Engine_HelperTEST.cs" />
+    <Compile Include="Helper_Classes\Help_Class.cs" />
     <Compile Include="Penalties\Penalty_HelperTEST.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
