--- a/SpectatorFootball.unitTests/SpectatorFootball.unitTests.csproj
+++ b/SpectatorFootball.unitTests/SpectatorFootball.unitTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Coach\CoachTEST.cs" />
     <Compile Include="DAOStubs\HomeTownsDAOTEST.cs" />
     <Compile Include="DAOStubs\Player_NamesDAOTEST.cs" />
+    <Compile Include="GameEngine\GameEngineTEST.cs" />
     <Compile Include="Game_Engine_Helper\Game_Engine_HelperTEST.cs" />
     <Compile Include="Helper_Classes\Help_Class.cs" />
     <Compile Include="Penalties\Penalty_HelperTEST.cs" />
