--- a/SpectatorFootball.unitTests/SpectatorFootball.unitTests.csproj
+++ b/SpectatorFootball.unitTests/SpectatorFootball.unitTests.csproj
@@ -55,6 +55,14 @@
     <Compile Include="DAOStubs\HomeTownsDAOTEST.cs" />
     <Compile Include="DAOStubs\Player_NamesDAOTEST.cs" />
     <Compile Include="GameEngine\GameEngineTEST.cs" />
+    <Compile Include="GameEngine\setPlayOutCome_FG\setPlayOutCome_FG_TEST.cs" />
+    <Compile Include="GameEngine\setPlayOutCome_FreeKick\setPlayOutCome_FreeKick_TEST.cs" />
+    <Compile Include="GameEngine\setPlayOutCome_Kickoff\setPlayOutCome_Kickoff_TEST.cs" />
+    <Compile Include="GameEngine\setPlayOutCome_OnsideKick\setPlayOutCome_OnsideKick_TEST.cs" />
+    <Compile Include="GameEngine\setPlayOutCome_Punt\setPlayOutCome_Punt_TEST.cs" />
+    <Compile Include="GameEngine\setPlayOutCome_RunPass\setPlayOutCome_RunPass_TEST.cs" />
+    <Compile Include="GameEngine\setPlayOutCome_XPPlay123\setPlayOutCome_XPPlay123_TEST.cs" />
+    <Compile Include="GameEngine\setPlayOutCome_XP\setPlayOutCome_XP_TEST.cs" />
     <Compile Include="Game_Engine_Helper\Game_Engine_HelperTEST.cs" />
     <Compile Include="Helper_Classes\Help_Class.cs" />
     <Compile Include="Penalties\Penalty_HelperTEST.cs" />
@@ -69,6 +77,7 @@
       <Name>SpectatorFootball</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
