--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -746,6 +746,8 @@
     <None Include="Images\Source\Players\L_Run2_Up_No_Ball.xcf" />
     <None Include="Images\Source\Players\L_Run2_Up_With_Ball.xcf" />
     <None Include="Images\Source\Players\L_Run2_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run3_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run4_No_Ball.xcf" />
     <None Include="Images\Source\Players\L_Stand_Player.xcf" />
     <None Include="Images\Source\Players\L_Tackled.xcf" />
     <None Include="Images\Source\Players\L_Upright_Block1.xcf" />
@@ -769,6 +771,8 @@
     <None Include="Images\Source\Players\R_Run2_Up_No_Ball.xcf" />
     <None Include="Images\Source\Players\R_Run2_Up_With_Ball.xcf" />
     <None Include="Images\Source\Players\R_Run2_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run3_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run4_No_Ball.xcf" />
     <None Include="Images\Source\Players\R_Stand_Player.xcf" />
     <None Include="Images\Source\Players\R_Tackled.xcf" />
     <None Include="Images\Source\Players\R_Upright_Block.xcf" />
