--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -746,12 +746,25 @@
     <None Include="Images\Source\Players\L_Run2_Up_No_Ball.xcf" />
     <None Include="Images\Source\Players\L_Run2_Up_With_Ball.xcf" />
     <None Include="Images\Source\Players\L_Run2_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run3_Down_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run3_Down_With_Ball.xcf" />
     <None Include="Images\Source\Players\L_Run3_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run3_Up_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run3_Up_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run3_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run4_Down_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run4_Down_With_Ball.xcf" />
     <None Include="Images\Source\Players\L_Run4_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run4_Up_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run4_Up_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run4_With_Ball.xcf" />
     <None Include="Images\Source\Players\L_Stand_Player.xcf" />
     <None Include="Images\Source\Players\L_Tackled.xcf" />
     <None Include="Images\Source\Players\L_Upright_Block1.xcf" />
     <None Include="Images\Source\Players\L_Upright_Block2.xcf" />
+    <None Include="Images\Source\Players\new_L_Run2_No_Ball.xcf" />
+    <None Include="Images\Source\Players\new_R_Run2_No_Ball.xcf" />
+    <None Include="Images\Source\Players\old_Player_Sprite_Sheet.xcf" />
     <None Include="Images\Source\Players\Player_Sprite_Sheet.xcf" />
     <None Include="Images\Source\Players\R_FG_KICK.xcf" />
     <None Include="Images\Source\Players\R_Kick_About_to_Catch.xcf" />
@@ -771,8 +784,18 @@
     <None Include="Images\Source\Players\R_Run2_Up_No_Ball.xcf" />
     <None Include="Images\Source\Players\R_Run2_Up_With_Ball.xcf" />
     <None Include="Images\Source\Players\R_Run2_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run3_Down_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run3_Down_With_Ball.xcf" />
     <None Include="Images\Source\Players\R_Run3_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run3_Up_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run3_Up_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run3_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run4_Down_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run4_Down_With_Ball.xcf" />
     <None Include="Images\Source\Players\R_Run4_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run4_Up_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run4_Up_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run4_With_Ball.xcf" />
     <None Include="Images\Source\Players\R_Stand_Player.xcf" />
     <None Include="Images\Source\Players\R_Tackled.xcf" />
     <None Include="Images\Source\Players\R_Upright_Block.xcf" />
